# maze

./: .gitignore  .gitmodules  LICENSE.md  README.md
engine/: CMakeLists.txt  MazeCore.cmake  MazeDebugger.cmake  MazeEditorTools.cmake  MazeEngine.cmake  MazeGamepad.cmake  MazeGraphics.cmake  MazeParticles.cmake  MazePhysics2D.cmake  MazeRenderSystemDX11.cmake  MazeRenderSystemOpenGL3.cmake  MazeRenderSystemOpenGLCore.cmake  MazeRenderSystemVulkan.cmake  MazeSound.cmake  MazeSoundSystemOpenAL.cmake  MazeThirdParty.cmake  MazeUI.cmake
engine/cmake/: Config.cmake  Macros.cmake  Utils.cmake
engine/cmake/modules/: FindOpenSL.cmake
engine/cmake/toolchains/: Emscripten.cmake
engine/doc/: android.txt  code_convention.txt  osx.txt
engine/include/maze-core/: MazeBaseTypes.hpp  MazeCoreHeader.hpp  MazeObject.hpp  MazeStdTypes.hpp  MazeTypes.hpp
engine/include/maze-debugger/: MazeDebuggerHeader.hpp
engine/include/maze-editor-tools/: MazeEditorToolsHeader.hpp
engine/include/maze-engine/: MazeEngine.hpp  MazeEngineConfig.hpp  MazeEngineHeader.hpp
engine/include/maze-gamepad/: MazeGamepadHeader.hpp
engine/include/maze-graphics/: MazeAlignment2D.hpp  MazeBlendMode.hpp  MazeColorF128.hpp  MazeColorGradient.hpp  MazeColorGradient.inl  MazeColorU32.hpp  MazeCompareFunction.hpp  MazeCullMode.hpp  MazeFrustum.hpp  MazeGPUByteBuffer.hpp  MazeGPUByteBufferGateway.hpp  MazeGPUByteBufferUtils.hpp  MazeGPUTextureBuffer.hpp  MazeGPUVertexBuffer.hpp  MazeGlobalShaderUniform.hpp  MazeGraphicsHeader.hpp  MazeMaterial.hpp  MazeMesh.hpp  MazeMeshSkeleton.hpp  MazeMeshSkeletonAnimation.hpp  MazeMeshSkeletonAnimator.hpp  MazePixelFormat.hpp  MazePixelSheet2D.hpp  MazeRenderBuffer.hpp  MazeRenderBufferPool.hpp  MazeRenderBufferSpecification.hpp  MazeRenderCommand.hpp  MazeRenderCommandType.hpp  MazeRenderCommands.hpp  MazeRenderCommandsBuffer.hpp  MazeRenderDrawTopology.hpp  MazeRenderMesh.hpp  MazeRenderMeshPool.hpp  MazeRenderPass.hpp  MazeRenderPassType.hpp  MazeRenderQueue.hpp  MazeRenderSystem.hpp  MazeRenderTarget.hpp  MazeRenderWindow.hpp  MazeRenderWindowParams.hpp  (+18 more)
engine/include/maze-particles/: MazeParticleSystem3DZone.hpp  MazeParticleSystemBurst.hpp  MazeParticleSystemParameter.hpp  MazeParticleSystemParameterColor.hpp  MazeParticleSystemParameterColor.inl  MazeParticleSystemParameterF32.hpp  MazeParticleSystemParameterF32.inl  MazeParticleSystemState.hpp  MazeParticles3D.hpp  MazeParticlesHeader.hpp
engine/include/maze-physics2d/: MazePhysics2DHeader.hpp
engine/include/maze-render-system-dx11/: MazeHelpersDX11.hpp  MazeMaterialDX11.hpp  MazeRenderBufferDX11.hpp  MazeRenderPassDX11.hpp  MazeRenderQueueDX11.hpp  MazeRenderSystemDX11.hpp  MazeRenderSystemDX11Config.hpp  MazeRenderSystemDX11Header.hpp  MazeRenderSystemDX11Plugin.hpp  MazeRenderWindowDX11.hpp  MazeShaderDX11.hpp  MazeShaderManagerDX11.hpp  MazeShaderSystemDX11.hpp  MazeShaderUniformDX11.hpp  MazeStateMachineDX11.hpp  MazeTexture2DDX11.hpp  MazeTexture2DMSDX11.hpp  MazeTextureCubeDX11.hpp  MazeVertexArrayObjectDX11.hpp  MazeVertexBufferObjectDX11.hpp
engine/include/maze-render-system-opengl-core/: MazeBlendModeOpenGL.hpp  MazeCompareFunctionOpenGL.hpp  MazeConfigOpenGL.hpp  MazeContextOpenGL.hpp  MazeContextOpenGLConfig.hpp  MazeCullModeOpenGL.hpp  MazeExtensionsOpenGL.hpp  MazeFunctionsOpenGL.hpp  MazeGPUBuffersControllerOpenGL.hpp  MazeGPUByteBufferGatewayOpenGL.hpp  MazeGPUTextureBufferOpenGL.hpp  MazeGPUTextureBufferOpenGLEmulated.hpp  MazeGPUTextureBufferOpenGLEmulatedVBO.hpp  MazeGPUTextureBufferOpenGLReal.hpp  MazeHeaderOpenGL.hpp  MazeMaterialOpenGL.hpp  MazeMaterialOpenGLPool.hpp  MazeModelMatricesArchitectureOpenGL.hpp  MazePixelFormatOpenGL.hpp  MazeRenderBufferOpenGL.hpp  MazeRenderDrawTopologyOpenGL.hpp  MazeRenderPassOpenGL.hpp  MazeRenderPassOpenGLPool.hpp  MazeRenderQueueOpenGL.hpp  MazeRenderSystemOpenGL.hpp  MazeRenderSystemOpenGLConfig.hpp  MazeRenderSystemOpenGLCoreHeader.hpp  MazeRenderWindowOpenGL.hpp  MazeShaderManagerOpenGL.hpp  MazeShaderOpenGL.hpp  MazeShaderSystemOpenGL.hpp  MazeShaderUniformOpenGL.hpp  MazeShaderUniformVariantOpenGL.hpp  MazeStateMachineOpenGL.hpp  MazeStencilOperationOpenGL.hpp  MazeTexture2DMSOpenGL.hpp  MazeTexture2DOpenGL.hpp  MazeTextureCubeOpenGL.hpp  MazeTextureOpenGL.hpp  MazeVertexArrayObjectOpenGL.hpp  (+3 more)
engine/include/maze-render-system-opengl3/: MazeContextOpenGL3.hpp  MazeExtensionsOpenGL3.hpp  MazeFunctionsOpenGL3.hpp  MazeRenderSystemOpenGL3.hpp  MazeRenderSystemOpenGL3Header.hpp  MazeRenderSystemOpenGL3Plugin.hpp
engine/include/maze-render-system-vulkan/: MazeHelpersVulkan.hpp  MazeMaterialVulkan.hpp  MazeRenderBufferVulkan.hpp  MazeRenderPassVulkan.hpp  MazeRenderQueueVulkan.hpp  MazeRenderSystemVulkan.hpp  MazeRenderSystemVulkanConfig.hpp  MazeRenderSystemVulkanHeader.hpp  MazeRenderSystemVulkanPlugin.hpp  MazeRenderWindowVulkan.hpp  MazeShaderManagerVulkan.hpp  MazeShaderSystemVulkan.hpp  MazeShaderUniformVulkan.hpp  MazeShaderVulkan.hpp  MazeStateMachineVulkan.hpp  MazeTexture2DMSVulkan.hpp  MazeTexture2DVulkan.hpp  MazeTextureCubeVulkan.hpp  MazeVertexArrayObjectVulkan.hpp  MazeVertexBufferObjectVulkan.hpp
engine/include/maze-sound/: MazeSound.hpp  MazeSoundData.hpp  MazeSoundGroup.hpp  MazeSoundHeader.hpp  MazeSoundSet.hpp  MazeSoundSource.hpp  MazeSoundStream.hpp  MazeSoundSystem.hpp
engine/include/maze-sound-system-openal/: MazeContextOpenAL.hpp  MazeDeviceInfoOpenAL.hpp  MazeFunctionsOpenAL.hpp  MazeHeaderOpenAL.hpp  MazeSoundGroupOpenAL.hpp  MazeSoundOpenAL.hpp  MazeSoundSourceOpenAL.hpp  MazeSoundSystemOpenAL.hpp  MazeSoundSystemOpenALConfig.hpp  MazeSoundSystemOpenALHeader.hpp  MazeSoundSystemOpenALPlugin.hpp
engine/include/maze-ui/: MazeCursorInputEvent.hpp  MazeLayoutAnchor.hpp  MazeUIHeader.hpp
engine/prj/linux/: configure-linux-codeblocks-makefiles-shared.sh  configure-linux-codeblocks-ninja-shared.sh  configure-linux-makefiles-shared.sh  (+1 more)
examples/maze-example-game00/: CMakeLists.txt
examples/maze-plugin-profiler-view-test/: CMakeLists.txt
plugins/csharp/: CMakeLists.txt
plugins/maze-plugin-profiler-view/: CMakeLists.txt
(+4021 files in other folders)
